implement uploadcare to upload user profile pic during new user  creation

--- a/pic-me-react/client/public/index.html
+++ b/pic-me-react/client/public/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0/journal/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
     <link rel="shortcut icon" href="/polaroid2.png" type="image/x-icon" />
+    <!-- link to Uploadcare -->
+    <script>UPLOADCARE_PUBLIC_KEY = "demopublickey";</script>
+    <script src="https://ucarecdn.com/libs/widget/3.5.1/uploadcare.full.min.js" charset="utf-8"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
