major style changes

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,8 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0/journal/bootstrap.min.css" />
-    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Monoton|Orbitron|Over+the+Rainbow" rel="stylesheet">
     <link rel="shortcut icon" href="/polaroid2.png" type="image/x-icon" />
     <!-- link to Uploadcare -->
     <script>UPLOADCARE_PUBLIC_KEY = "demopublickey";</script>
